Turn tags in dataobj header into links

--- a/archivy/templates/dataobjs/show.html
+++ b/archivy/templates/dataobjs/show.html
@@ -48,7 +48,9 @@
 
     <div class="embedded-tags post-tags">
       {% for tag in embedded_tags %}
-        <span class="post-tag">{{ tag }}</span>
+        <a href="/tags/{{ tag }}">
+          <span class="post-tag">{{ tag }}</span>
+        </a>
       {% endfor %}
     </div>
     <div class="metadata-tags post-tags">
