Include frontmatter tags in both /tags/ views.

--- a/archivy/templates/tags/show.html
+++ b/archivy/templates/tags/show.html
@@ -12,6 +12,10 @@
       {% endfor %}
     {% endif %}
   {% endfor %}
+
+  {% for res in frontmatter_results %}
+    <li><a href="/dataobj/{{ res['id'] }}">{{ res['title'] }}</li></a>
+  {% endfor %}
 </ul>
 <script>
   document.querySelectorAll(".markdown-result").forEach((match) => {
