Adding frontmatter tags

--- a/archivy/templates/base.html
+++ b/archivy/templates/base.html
@@ -12,9 +12,7 @@
       {% endif %}
 
       <link rel="icon" href="{{ url_for('static', filename='archivy.svg')}}" type="image/svg+xml">
-      <style>
-
-      </style>
+      <!-- <script type="text/javascript" src="{{ url_for('static', filename='vue.js') }}"></script> -->
     </head>
     <body>
 
