--- a/archivy/templates/markdown-parser.html
+++ b/archivy/templates/markdown-parser.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/monokai.css">
 <script src="/static/math.js">
 </script>
-<script src="/static/highlight.js"></script> 
+<script src="/static/highlight.min.js"></script> 
 <script src="/static/parser.js"></script>
 <script>
   window.parser = window.markdownit({
