--- a/archivy/templates/dataobjs/show.html
+++ b/archivy/templates/dataobjs/show.html
@@ -54,12 +54,40 @@
      #}{% endfor %}
     </div>{# 
   #}<div class="metadata-tags post-tags">
-    {% for tag in dataobj["tags"] %}{# 
-       #}<a href="/tags/{{ tag }}">{# 
-         #}<span class="post-tag">{{ tag }}</span>{# 
-       #}</a>{# 
+    {% for tag in dataobj.tags %}{# 
+    #}<span class="post-tag">
+        <a href="/tags/{{ tag }}">{{ tag }}</a>
+        <div class="metadata-tags-remove hidden"
+             onclick="frontmatter_tag_delete('{{ tag }}')">-</div>
+      </span>{# 
      #}{% endfor %}
     </div>
+    <div class="metadata-tags-add">
+      <div class="metadata-tags-button metadata-tags-add-button"
+           onclick="toggle_frontmatter_tags_form()">
+        +
+      </div>
+      <div class="metadata-tags-add-form hidden">
+        <form id="frontmatter-add-tag">
+          <input list="tags" id="tag_frontmatter_input" required />
+          <datalist id="tags">
+            {% for tag in tag_list %}
+              <option value="#{{tag}}">
+            {% endfor %}
+          </datalist>
+        </form>
+
+        <div class="metadata-tags-close-button metadata-tags-button"
+             onclick="toggle_frontmatter_tags_form()">
+          x
+        </div>
+      </div>
+      <div class="metadata-tags-button metadata-tags-close-button"
+           onclick="toggle_frontmatter_tags_delete()">
+        -
+      </div>
+    </div>
+
     <span class="post-date">{{ dataobj['date'] }}</span>
 
     {% if dataobj['type'] == 'bookmark' or dataobj['type'] == 'pocket_bookmark' %}
@@ -75,7 +103,8 @@
             <svg class="octicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg>
             <span>Edit</span>
           </button>
-          <form action="/dataobj/delete/{{ dataobj['id'] }}" method="delete" onsubmit="return confirm('Delete this item permanently?')" novalidate>
+
+          <form class="delete-form" action="/dataobj/delete/{{ dataobj['id'] }}" method="delete" onsubmit="return confirm('Delete this item permanently?')" novalidate>
             {{ form.hidden_tag() }}
             <button class="btn btn-delete">
               <svg class="octicon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M6.5 1.75a.25.25 0 01.25-.25h2.5a.25.25 0 01.25.25V3h-3V1.75zm4.5 0V3h2.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H5V1.75C5 .784 5.784 0 6.75 0h2.5C10.216 0 11 .784 11 1.75zM4.496 6.675a.75.75 0 10-1.492.15l.66 6.6A1.75 1.75 0 005.405 15h5.19c.9 0 1.652-.681 1.741-1.576l.66-6.6a.75.75 0 00-1.492-.149l-.66 6.6a.25.25 0 01-.249.225h-5.19a.25.25 0 01-.249-.225l-.66-6.6z"></path></svg>
@@ -509,4 +538,12 @@
       })
     {% endif %}
   </script>
+  <script type="text/javascript">
+    var current_frontmatter_tags = [
+      {% for tag in dataobj["tags"] %}"{{ tag }}",{% endfor %}
+    ];
+    var dataobj_id = {{ dataobj.id }};
+  </script>
+  <script type="text/javascript"
+          src="{{ url_for('static', filename='component/frontmatter_tags.js') }}"></script>
 {% endblock %}
