--- a/archivy/static/main.css
+++ b/archivy/static/main.css
@@ -598,3 +598,7 @@ hr {
 .metadata-tags-remove {
     display: inline-block;
 }
+
+.embedded-tags .post-tag {
+    background-color: rgba(255, 165, 0, 0.4);
+}
