--- a/archivy/templates/dataobjs/show.html
+++ b/archivy/templates/dataobjs/show.html
@@ -72,7 +72,7 @@
           <input list="tags" id="tag_frontmatter_input" required />
           <datalist id="tags">
             {% for tag in tag_list %}
-              <option value="#{{tag}}">
+              <option value="{{tag}}">
             {% endfor %}
           </datalist>
         </form>
