Longer timeout, change code theme

--- a/archivy/templates/markdown-parser.html
+++ b/archivy/templates/markdown-parser.html
@@ -1,6 +1,7 @@
 <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markdown-it-texmath/css/texmath.min.css">
-<link rel="stylesheet" href="/static/monokai.css">
+<!-- <link rel="stylesheet" href="/static/monokai.css"> -->
+<link rel="stylesheet" href="/static/solarized-light.css">
 <script src="/static/math.js">
 </script>
 <script src="/static/highlight.min.js"></script> 
