--- a/archivy/static/main.css
+++ b/archivy/static/main.css
@@ -602,3 +602,12 @@ hr {
 .embedded-tags .post-tag {
     background-color: rgba(255, 165, 0, 0.4);
 }
+
+/* Folder index */
+.folder-index {
+    max-height: 20em;
+    overflow-y: scroll;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    padding: 1em 1em;
+    margin: 1em 0;
+}
