BUGFIX: Only show the index if it exists

--- a/archivy/templates/home.html
+++ b/archivy/templates/home.html
@@ -83,11 +83,13 @@
                           | safe
        %} */
     // Render the content with TOC
-    let contentDiv = document.getElementById("content");
-    function renderContent(content) {
-      return window.parser.customRender(content);
-    }
-    contentDiv.innerHTML = renderContent(`{{ content }}`);
+    {% if content != "False" %}
+        let contentDiv = document.getElementById("content");
+        function renderContent(content) {
+          return window.parser.customRender(content);
+        }
+        contentDiv.innerHTML = renderContent(`{{ content }}`);
+    {% endif %}
 
   // search functionality
   {% if search_enabled %}  
