--- a/archivy/static/main.css
+++ b/archivy/static/main.css
@@ -81,6 +81,7 @@ form {
 
 .content {
     width: 60%;
+    z-index: 10;
 }
 
 /* user login / edit forms */
@@ -140,6 +141,25 @@ form {
     width: 22%;
     overflow: visible;
     border-right: 5px solid #48BB78;
+    transition: 0.5s;
+    position: relative;
+    z-index: 0;
+}
+
+.sidebar-toggle {
+    position: fixed;
+    left: calc(22% - 45px);
+
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+
+    z-index: 5;
+    transition: 0.5s;
 }
 
 .sidebar li {
