--- a/archivy/templates/home.html
+++ b/archivy/templates/home.html
@@ -48,6 +48,15 @@
             </div>
         </div>
     {% endif %}
+
+    <div class="folder-tags">
+        {% for tag in tag_cloud %}
+        <a href="/tags/{{ tag }}">
+            <span class="post-tag">{{ tag }}</span>
+        </a>
+        {% endfor %}
+    </div>
+
     <ul>
         {% for subdir in dir.child_dirs.values() | sort(attribute="name") %}
             <li class="dir">
